fix: modal appearance. z-index applied to it.

--- a/Modal/modal.css
+++ b/Modal/modal.css
@@ -3,7 +3,7 @@
     /* border: 2px solid black; */
     display: flex;
     justify-content: center;
-    
+    z-index:9999;
 }
 .modal{
    background-color: snow;
@@ -12,7 +12,7 @@
     top:14em;
     left:50em;
     display:none;
-    
+    z-index:9999;
     width:fit-content;
     
     background-color: rgb(0,0,0);
@@ -75,4 +75,5 @@
     display:none;   
     background-color: rgb(0,0,0);
     background-color: rgb(0,0,0,0.4);
+    z-index:9999;
 }
